sandbox/output
StringCalculator.java:9: error: ';' expected
                    + Integer.parseInt(numberArray[1])
                                                      ^
1 error
